# requests_rs

./: Cargo.toml  README.md  lib.rs  readme.md
src/: lib.rs  main.rs
