[package]
name = "requests_rs"
version = "0.1.6"
edition = "2021"
authors = ["shasankp000 <shasankp.14@gmail.com>"]
description = "A simple library for sending GET/POST requests, included with an async file downloader. Intended for mostly small projects which need to make quick GET/POST requests or download files."
rust-version = "1.65"
readme = "README.md"
license = "BSD-2-Clause"
keywords = ["requests", "file_downloader"]
categories = ["algorithms"]
homepage = "https://github.com/shasankp000/requests_rs"
documentation = "https://github.com/shasankp000/requests_rs#readme"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.12", features = ["json", "blocking"]}
tokio = { version = "1", features = ["full"] }
colored = "2.0.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
jsonxf = "1.1.1"